{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 17,
  "lineage": "a9a7e28d-8784-661a-ca08-5295e35d628b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app_engine_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-08-10T11:31:48.274-07:00",
            "custom_request_headers": [
              "Host: webapp-deploy-395414.ew.r.appspot.com"
            ],
            "enable_cdn": false,
            "fingerprint": "iqwOiB7SLdE=",
            "generated_id": 499623210685862907,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/healthChecks/app-engine-health-check"
            ],
            "id": "projects/webapp-deploy-395414/global/backendServices/app-engine-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-engine-backend-service",
            "port_name": "http",
            "project": "webapp-deploy-395414",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/backendServices/app-engine-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.app_engine_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-10T11:31:47.089-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/webapp-deploy-395414/global/firewalls/jenkins-firewall",
            "log_config": [],
            "name": "jenkins-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/networks/default",
            "priority": 1000,
            "project": "webapp-deploy-395414",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/firewalls/jenkins-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.jenkins_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_engine_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/webapp-deploy-395414/global/forwardingRules/app-engine-forwarding-rule",
            "ip_address": "34.149.108.47",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-engine-forwarding-rule",
            "port_range": "80-80",
            "project": "webapp-deploy-395414",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/forwardingRules/app-engine-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/targetHttpProxies/app-engine-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.app_engine_backend_service",
            "google_compute_health_check.app_engine_health_check",
            "google_compute_target_http_proxy.app_engine_proxy",
            "google_compute_url_map.app_engine_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230724",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/zones/europe-west1-b/disks/jenkins-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/webapp-deploy-395414/zones/europe-west1-b/instances/jenkins-instance",
            "instance_id": "491220639747183592",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "yPbkguXkI0A=",
            "metadata_startup_script": "#!/bin/bash\r\nsudo apt-get update\r\nsudo apt-get install -y default-jre\r\n\r\nwget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add -\r\nsudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ \u003e /etc/apt/sources.list.d/jenkins.list'\r\n\r\nsudo apt-get update\r\nsudo apt-get install -y jenkins\r\n",
            "name": "jenkins-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.22.208.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/networks/default",
                "network_ip": "10.132.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "webapp-deploy-395414"
              }
            ],
            "project": "webapp-deploy-395414",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/zones/europe-west1-b/instances/jenkins-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "europe-west1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/webapp-deploy-395414/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "webapp-deploy-395414",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app_engine_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T11:32:28.597-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/webapp-deploy-395414/regions/europe-west1/subnetworks/app-engine-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "app-engine-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "webapp-deploy-395414",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/regions/europe-west1/subnetworks/app-engine-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T11:32:28.553-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/webapp-deploy-395414/regions/europe-west1/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "webapp-deploy-395414",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/regions/europe-west1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T11:32:28.594-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/webapp-deploy-395414/regions/europe-west1/subnetworks/subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "webapp-deploy-395414",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/regions/europe-west1/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "app_engine_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T11:32:21.884-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/webapp-deploy-395414/global/targetHttpProxies/app-engine-proxy",
            "name": "app-engine-proxy",
            "project": "webapp-deploy-395414",
            "proxy_bind": false,
            "proxy_id": 5286783356396671962,
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/targetHttpProxies/app-engine-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/urlMaps/app-engine-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.app_engine_backend_service",
            "google_compute_health_check.app_engine_health_check",
            "google_compute_url_map.app_engine_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_engine_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T11:32:10.326-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/backendServices/app-engine-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "yM8ZCZL5v8c=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/webapp-deploy-395414/global/urlMaps/app-engine-url-map",
            "map_id": 2847629763520533445,
            "name": "app-engine-url-map",
            "path_matcher": [],
            "project": "webapp-deploy-395414",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webapp-deploy-395414/global/urlMaps/app-engine-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.app_engine_backend_service",
            "google_compute_health_check.app_engine_health_check"
          ]
        }
      ]
    }
  ]
}